URLの非推奨処理を修正